IMCMS-375 - Details in top panel: - Fix log out button on smaller screens

--- a/src/main/webapp/css/admin/imcms-admin_panel.css
+++ b/src/main/webapp/css/admin/imcms-admin_panel.css
@@ -473,6 +473,7 @@
 
     .imcms-panel__item--logout {
         width: 100px;
+        padding-top: 0;
     }
 
     .imcms-admin-panel__item:last-of-type {
